# gamecore

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_STYLE.TXT  README  README.md
content/: README  cube.frag  cube.vert  shaders.gcpak  shaders.txt  textures.gcpak  textures.txt
content/shader_src/: busy.comp  cube.frag  cube.vert  editor.frag  editor.vert  editor_instanced.vert  fancy.frag  fancy.vert  fancy_lambert.frag  pbr.frag  pbr_instanced.vert  pbr_single_draw.vert  simple.frag  simple.vert  skybox.frag  skybox.vert
dedicated_server/: CMakeLists.txt  dedicated_server.h.in
dedicated_server/src/: main.cpp  server.cpp  server.h
gamecore/: CMakeLists.txt
gamecore/include/gamecore/: gc_abort.h  gc_app.h  gc_asio_throw_exception.h  gc_asset_id.h  gc_byte_reader.h  gc_byte_writer.h  gc_camera_component.h  gc_camera_system.h  gc_compile_shader.h  gc_configuration.h  gc_content.h  gc_core_components.h  gc_crc_table.h  gc_cube_component.h  gc_cube_system.h  gc_debug_ui.h  gc_defines.h  gc_disk_io.h  gc_ecs.h  gc_format_specialisations.h  gc_frame_state.h  gc_game_main.h  gc_gcpak.h  gc_gen_mesh.h  gc_gen_tangents.h  gc_gpu_resources.h  gc_importer_gltf.h  gc_jobs.h  gc_light_component.h  gc_light_system.h  gc_logger.h  gc_logger_spdlog.h  gc_mesh_vertex.h  gc_name.h  gc_net.h  gc_net_client.h  gc_net_common.h  gc_net_rto.h  gc_net_server.h  gc_net_ui.h  (+34 more)
gamecore/src/: gc_app.cpp  gc_asio_impl.cpp  gc_assert.cpp  gc_asset_id.cpp  gc_byte_reader.cpp  gc_byte_writer.cpp  gc_compile_shader.cpp  gc_configuration.cpp  gc_content.cpp  gc_cube_system.cpp  gc_debug_ui.cpp  gc_disk_io.cpp  gc_ecs.cpp  gc_gen_mesh.cpp  gc_gen_tangents.cpp  gc_importer_gltf.cpp  gc_jobs.cpp  gc_light_system.cpp  gc_logger.cpp  gc_logger_spdlog.cpp  gc_name.cpp  gc_net.cpp  gc_net_client.cpp  gc_net_common.cpp  gc_net_server.cpp  gc_net_ui.cpp  gc_prefab.cpp  gc_render_backend.cpp  gc_render_buffer.cpp  gc_render_mesh.cpp  gc_render_system.cpp  gc_render_world.cpp  gc_resource_manager.cpp  gc_threading.cpp  gc_transform_system.cpp  gc_ui.cpp  gc_units.cpp  gc_vk_mem_alloc_impl.cpp  gc_vulkan_allocator.cpp  gc_vulkan_device.cpp  (+8 more)
gamecore_template/: CMakeLists.txt  gamecore_template.h.in
gamecore_template/content/: readme.txt  shaders.gcpak  shaders.txt
gamecore_template/resource/: gamecore_template.rc
gamecore_template/src/: game.cpp  game.h  gen_mesh.cpp  gen_mesh.h  main.cpp  mouse_move.cpp  mouse_move.h  spin.cpp  spin.h
gamecore_test/: CMakeLists.txt
gamecore_test/src/: main.cpp
gclog/: CMakeLists.txt
gclog/include/gclog/: gclog.h
gclog/src/: gclog.cpp  gclog_spdlog.cpp  gclog_spdlog.h
gcpak/: CMakeLists.txt
gcpak/include/gcpak/: gcpak.h  gcpak_prefab.h
gcpak/src/: gcpak.cpp
gctemplates/: CMakeLists.txt  README.md
gctemplates/include/gctemplates/: gct_maybe_owning.h  gct_static_vector.h  gct_sv_stream.h
gctemplates/src/: test.cpp
include/gamecore/: gc_app.h  gc_assert.h  gc_asset_id.h  gc_content.h  gc_crc_table.h  gc_defines.h  gc_disk_io.h  gc_gcpak.h  gc_jobs.h  gc_logger.h  gc_logger_debug.h  gc_logger_null.h  gc_ring_buffer.h  gc_stopwatch.h
notes/: coordinates.txt  networking.txt  rendering.txt  todo.txt
scripts/: addclass.sh  extract_constexpr_names.sh
src/: gc_abort.cpp  gc_app.cpp  gc_assert.cpp  gc_content.cpp  gc_disk_io.cpp  gc_jobs.cpp  gc_logger.cpp  gc_logger_debug.cpp  gc_logger_null.cpp  gc_logger_spdlog.cpp
test/: main.cpp
tools/compile_shaders/: CMakeLists.txt  README  compile_shaders.h.in
tools/compile_shaders/src/: main.cpp
tools/gcpak_editor/: CMakeLists.txt  README  gcpak_editor.h.in
tools/gcpak_editor/resource/: gcpak_editor.rc
tools/gcpak_editor/src/: editor_system.cpp  editor_system.h  main.cpp
tools/package_meshes/: CMakeLists.txt  package_meshes.h.in
tools/package_meshes/src/: main.cpp
tools/package_textures/: CMakeLists.txt  package_textures.h.in
tools/package_textures/src/: main.cpp
